email clipboard copy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
 <footer id="theFooter">
   <div class="content">
     <h3>Contact:</h3>
-        <p itemprop="email">gabriel.garus@protonmail.com</p>
+        <div id="myEmail">
+          <p itemprop="email">gabriel.garus@protonmail.com</p>
+          <button>copy email ( ctrl+c )</button>
+        </div>
         <br /><hr />
         <nav class="social primary">
             <a href="https://ie.linkedin.com/in/gabriel-garus-8891a333" target="_blank" class="linkedin">Linkedin</a>
