--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,18 +1,50 @@
 <script>
-  function ffDomLoadedScripts() {
 
+  function expanseItem (item) {
+    const btn = item.querySelector('button');
+    const info = item.querySelector('.item-info');
+
+    btn.addEventListener('click', () => {
+      info.classList.toggle('open');
+      item.classList.toggle('open');
+    });
+  }
+
+  function expanseItems() {
     const expertiseItems = document.querySelectorAll('.expertise-item');
+    if(!expertiseItems || !expertiseItems.length) {
+      return null;
+    }
+    expertiseItems.forEach(expanseItem);
+  }
 
-    expertiseItems.forEach((item) => {
-      const btn = item.querySelector('button');
-      const info = item.querySelector('.item-info');
+  function clipBoardEmail() {
+    const myEmail = document.getElementById('myEmail');
+    if (!myEmail) {
+      return null;
+    }
 
-      btn.addEventListener('click', () => {
-        info.classList.toggle('open');
-        item.classList.toggle('open');
-      });
+    const btn = myEmail.querySelector('button');
+    const email = myEmail.querySelector('p').innerHTML;
+
+    btn.addEventListener('click', () => {
+      const ghost = document.createElement('input');
+      ghost.setAttribute('type', 'text');
+      ghost.value = email;
+      ghost.style.opacity = 0;
+      myEmail.appendChild(ghost);
+      
+      ghost.select();
+      ghost.setSelectionRange(0, 99999); /*For mobile devices*/
+      /* Copy the text inside the text field */
+      document.execCommand("copy");
+      myEmail.removeChild(ghost);
     });
 
+  }
+  function ffDomLoadedScripts() {
+    expanseItems();
+    clipBoardEmail();
   }
 
   document.addEventListener('DOMContentLoaded', ffDomLoadedScripts);
