--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,8 @@
 {% capture footer %}
-<footer id="theFooter">
+<footer id="theFooter" class="footer">
   <div class="content">
-    <h3>Contact:</h3>
-      <div id="myEmail" class="contact-email">
-        <a href="mailto:gabriel.garus@protonmail.com" class="email-link"><div class="envelope"></div></a>
-        <p itemprop="email" class="email-text">gabriel.garus@protonmail.com</p>
-        <button class="email-copy" title="copy to clipboard">copy email ( ctrl+c )</button>
-      </div>
-    
-      <br /><hr />
-     
+      <div class="ball"></div>
+      <h3><em>You can also find me on:</em></h3>
       <nav class="social primary">
         <a href="https://ie.linkedin.com/in/gabriel-garus-8891a333" target="_blank" class="linkedin">Linkedin</a>
         <a href="https://github.com/Ryshard" target="_blank" class="github">GitHub</a>
