about us and further improvements

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -39,6 +39,7 @@
       /* Copy the text inside the text field */
       document.execCommand("copy");
       myEmail.removeChild(ghost);
+      btn.classList.add('hidden');
     });
 
   }
