--- a/css/stylus.scss
+++ b/css/stylus.scss
@@ -7,4 +7,10 @@ sitemap:
 @import "settings";
 @import "tools";
 @import "base";
+@import "header";
+@import "footer";
+@import "expertise";
 @import "envelope";
+@import "contact-email";
+@import "cta-links";
+@import "about";
