--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,8 @@
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
-<link rel="stylesheet" href="css/stylus.css" />
+{% assign styleFile = include.styleFile | default: "stylus" %}
+<link rel="stylesheet" href="css/{{ styleFile }}.css" />
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
