--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,11 +2,17 @@
 <html lang="en">
 {% include head.html %}
 <body>
+{% capture header %}
 {% include header.html %}
+{% endcapture %}
+{{ header | normalize_whitespace }}
 <main class="main-content">
 {{ content | normalize_whitespace }}
 </main>
+{% capture footer %}
 {% include footer.html %}
 {%include js.html %}
+{% endcapture %}
+{{ footer | normalize_whitespace }}
 </body>
 </html>
