--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 {% if page.image %}
 {% assign seoImage = page.image %}
 {% else %}
-{% assign seoImage = '/img/facebook-preview.jpg' %}
+{% assign seoImage = '/img/gabriel-garus.jpg' %}
 {% endif %}
 {% assign pageUrl =  page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url %}
 {% assign imgUrl =  site.urls.images | prepend: site.baseurl | prepend: site.url %}
