--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,7 @@
 <head>
+<link rel="dns-prefetch" href="https://gabrielgarus.s3-eu-west-1.amazonaws.com/">
+<link rel="dns-prefetch" href="http://www.linkedin.com/">
+
 <meta charset="utf-8">
 {% capture metaCalculations %}
 {% if page.title %}
@@ -24,6 +27,7 @@
 <meta name="identifier-url" content="{{ site.url }}" />
 <meta name="robots" content="index,follow" />
 
+<meta name="google-site-verification" content="2jMqtJKHWbtJI0laHDe4a9YwXnNG7_JYujABTtqq_tw" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
