--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,27 @@
       </nav>
   </div>
 </footer>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Person",
+    "name": "Gabriel Garus",
+    "url": "https://ryshard.github.io/",
+    "image": "https://ryshard.github.io/img/gabriel-garus.jpg",
+    "sameAs": [
+      "https://www.linkedin.com/in/gabrielgarus/",
+      "https://ryshard.github.io/",
+      "https://www.facebook.com/gabriel.garus",
+      "https://twitter.com/azaqi",
+      "https://www.youtube.com/channel/UCm2YfoT_-jmxYLR4VplWFZQ",
+      "https://github.com/Ryshard"
+    ],
+    "jobTitle": "Web / UI developer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Future Finance"
+    }  
+  }
+  </script>
 {% endcapture %}
 {{ footer | normalize_whitespace }}
