fix circles and update footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,14 +6,13 @@
       <nav class="social primary">
         <a href="https://ie.linkedin.com/in/gabriel-garus-8891a333" target="_blank" class="linkedin">Linkedin</a>
         <a href="https://github.com/Ryshard" target="_blank" class="github">GitHub</a>
-        <a href="https://gist.github.com/Ryshard" target="_blank" class="gist">Gist</a>
       </nav>
       <br />
       <nav class="social primary">
         <a href="https://twitter.com/Azaqi" target="_blank" class="twitter">Twitter</a>
         <a href="https://www.facebook.com/gabriel.garus" target="_blank" class="facebook">FaceBook</a>
         <a href="https://www.strava.com/athletes/5574105" target="_blank" class="strava">Strava</a>
-        <a href="http://boinc.netsoft-online.com/e107_plugins/boinc/get_user.php?cpid=33728a38745130c51f53259c56a1fdf3&html=1" target="_blank" class="wow">seti@home</a>
+        <a href="https://setiathome.berkeley.edu/show_user.php?userid=8646556" target="_blank" class="wow">seti@home</a>
       </nav>
   </div>
 </footer>
