--- a/_includes/js.html
+++ b/_includes/js.html
@@ -40,6 +40,7 @@
       document.execCommand("copy");
       myEmail.removeChild(ghost);
       btn.classList.add('hidden');
+      btn.innerHTML = '-- email copied! --';
     });
 
   }
