--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
         <a href="https://www.facebook.com/gabriel.garus" target="_blank" class="facebook">FaceBook</a>
         <a href="https://www.strava.com/athletes/5574105" target="_blank" class="strava">Strava</a>
         <a href="https://setiathome.berkeley.edu/show_user.php?userid=8646556" target="_blank" class="wow">seti@home</a>
+        <a href="https://open.spotify.com/user/gabriel.garus" target="_blank" class="spotify">Spotify</a>
       </nav>
   </div>
 </footer>
@@ -21,17 +22,33 @@
     "@context": "https://schema.org/",
     "@type": "Person",
     "name": "Gabriel Garus",
+    "gender": "Male",
+    "description": "Started as hard-core wordpress/php developer.
+    Currently devoted to React.js and modern javaScript.
+    Always open to new ideas.",
+    "alternateName": "Gabriel Garus",
     "url": "https://ryshard.github.io/",
     "image": "https://ryshard.github.io/img/gabriel-garus.jpg",
+    "email": "gabriel.garus@protonmail.com",
+    "birthPlace" : {
+      "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Warsaw",
+          "addressCountry": "Poland"
+      }
+    },
     "sameAs": [
       "https://www.linkedin.com/in/gabrielgarus/",
       "https://ryshard.github.io/",
       "https://www.facebook.com/gabriel.garus",
       "https://twitter.com/azaqi",
       "https://www.youtube.com/channel/UCm2YfoT_-jmxYLR4VplWFZQ",
-      "https://github.com/Ryshard"
+      "https://github.com/Ryshard",
+      "https://open.spotify.com/user/gabriel.garus"
     ],
     "jobTitle": "Web / UI developer",
+    "nationality": "Poland",
     "worksFor": {
       "@type": "Organization",
       "name": "Future Finance"
