add goodreads link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
         <a href="https://www.strava.com/athletes/5574105" target="_blank" class="strava">Strava</a>
         <a href="https://setiathome.berkeley.edu/show_user.php?userid=8646556" target="_blank" class="wow">seti@home</a>
         <a href="https://open.spotify.com/user/gabriel.garus" target="_blank" class="spotify">Spotify</a>
+        <a href="https://www.goodreads.com/user/show/86133846-gabriel" target="_blank" class="goodreads">GoodReads</a>
       </nav>
   </div>
 </footer>
@@ -45,7 +46,8 @@
       "https://twitter.com/azaqi",
       "https://www.youtube.com/channel/UCm2YfoT_-jmxYLR4VplWFZQ",
       "https://github.com/Ryshard",
-      "https://open.spotify.com/user/gabriel.garus"
+      "https://open.spotify.com/user/gabriel.garus",
+      "https://www.goodreads.com/user/show/86133846-gabriel"
     ],
     "jobTitle": "Web / UI developer",
     "nationality": "Poland",
