--- a/hexo/gabriel-gh/themes/gandalf/layout/layout.ejs
+++ b/hexo/gabriel-gh/themes/gandalf/layout/layout.ejs
@@ -2,7 +2,12 @@
 <html lang="en">
   <%- partial('partials/head') %>
   <body>
+ 
     <%- partial('partials/header') %>
+ 
     <main class="main-content"><%- body %></main>
+ 
+    <%- partial('partials/footer') %>
+
   </body>
 </html>
