--- a/hexo/gabriel-gh/themes/gandalf/layout/index.ejs
+++ b/hexo/gabriel-gh/themes/gandalf/layout/index.ejs
@@ -34,11 +34,31 @@
     
   <br /><div class="divider"></div><br />
 
-  <!-- {% include cta-links.html%} -->
+  <div class="cta-links">
+    <a class="linkedin-link" href="https://www.linkedin.com/in/gabriel-garus-8891a333" target="_blank">
+      <%- partial('svg/linkedin') %>
+    </a>
+    <a class="gh-link" href="https://github.com/Ryshard" target="_blank">
+      <%- partial('svg/githublogo') %>
+    </a>
+    <a class="cv-link" href="https://gabrielgarus.s3-eu-west-1.amazonaws.com/docs/cv/gabriel-garus-2020-v71.pdf" target="_blank">
+      Download my cv (pdf)
+    </a>
+  </div>
+  
 
   <br /><div class="divider"></div><br />
 
-  <!-- {% include contact.html %} -->
+  <h3>Contact:</h3>
+  <div id="myEmail" class="contact-email">
+    <a href="mailto:gabriel.garus@protonmail.com" class="email-link"><div class="envelope"></div></a>
+    <p itemprop="email" class="email-text">gabriel.garus@protonmail.com</p>
+    <button class="email-copy" title="copy to clipboard">
+      <span class="mobile-only">copy</span>
+      <span class="tablet-only">copy email ( ctrl+c )</span>
+      <span class="desktop-only">copy email to clipboard ( ctrl+c )</span>
+    </button>
+  </div>
 
   <br /><div class="divider"></div><br />
   
