--- a/hexo/gabriel-gh/themes/gandalf/layout/partials/head.ejs
+++ b/hexo/gabriel-gh/themes/gandalf/layout/partials/head.ejs
@@ -6,9 +6,9 @@
   <link rel="dns-prefetch" href="http://www.linkedin.com/" />
 
   <meta charset="utf-8" />
-  <title>pageTitle</title>
-  <meta name="description" content="{{ pageDescription }}" />
-  <meta name="identifier-url" content="{{ site.url }}" />
+  <title><%- page.title %></title>
+  <meta name="description" content="<%- page.description %>" />
+  <meta name="identifier-url" content="<%- page.permalink %>" />
   <meta name="robots" content="index,follow" />
 
   <meta
@@ -21,21 +21,21 @@
   <!-- Open Graph -->
   <meta property="og:locale" content="en" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="{{ pageTitle }}" />
-  <meta property="og:description" content="{{ pageDescription }}" />
-  <meta property="og:url" content="{{ pageUrl }}" />
-  <meta property="og:site_name" content="{{ pageTitle }}" />
-  <meta property="og:image" content="{{ seoImage | prepend: site.url }}" />
+  <meta property="og:title" content="<%- page.title %>" />
+  <meta property="og:description" content="<%- page.description %>" />
+  <meta property="og:url" content="<%- page.permalink %>" />
+  <meta property="og:site_name" content="<%- page.title %>" />
+  <meta property="og:image" content="<%- full_url_for('/img/logo.png') %>" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <link rel="stylesheet" href="https://ryshard.github.io/css/stylus.css" />
+  <%- css('/css/style.css')  %> 
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="{{ pageTitle }}" />
-  <meta name="twitter:image" content="{{ seoImage | prepend: site.url }}" />
-  <meta name="twitter:description" content="{{ pageDescription }}" />
-  <meta name="twitter:site" content="@{{ site.twitter_username }}" />
-  <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
+  <meta name="twitter:title" content="<%- page.title %>" />
+  <meta name="twitter:image" content="<%- full_url_for('/img/logo.png') %>" />
+  <meta name="twitter:description" content="<%- page.description %>" />
+  <meta name="twitter:site" content="@Azaqi" />
+  <meta name="twitter:creator" content="@Azaqi" />
 </head>
