--- a/themes/gandalf/layout/index.ejs
+++ b/themes/gandalf/layout/index.ejs
@@ -3,7 +3,7 @@
     <div class="aboutMain">
       <div class="info">
         <p class="text">
-          Web developer & software engineer based in Dublin, Ireland <br />
+          Web developer & software engineer based in Dublin, Ireland.
         </p>
         <p>
           Over 5 years industry experience, from cutting-edge fintech companies 
