--- a/source/css/_about.scss
+++ b/source/css/_about.scss
@@ -2,16 +2,16 @@
   color: #666;
   text-align: center;
   margin-bottom: 48px;
+  padding: 0 12px;
 
   .text {
     font-size: 24px;
-    padding-left: 12px;
   }
 
   p {
     text-align: left;
     line-height: 1.5;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   img {
