--- a/themes/gandalf/layout/partials/header.ejs
+++ b/themes/gandalf/layout/partials/header.ejs
@@ -1,11 +1,7 @@
 <header class="main-header">
-  <div class="content">
-    <div class="magic-hat">
-      <!-- {% include svg/magic-2.svg %} -->
-    </div>
-    
+  <div class="content"> 
     <h1>gabriel garus</h1>
-    <h2>- the front-end wizard</h2>
+    <h2>the front-end wizard</h2>
     <div class="js-magic-ball ball"></div>
   </div>
   
