--- a/source/css/_header.scss
+++ b/source/css/_header.scss
@@ -10,7 +10,6 @@
   h1 {
     width: 100%;
     font-size: 24px;
-    // margin-bottom: $space-s;
     text-align: right;
     @include mq(440px) {
       font-size: 36px;
@@ -21,44 +20,9 @@
     font-size: 12px;
     text-align: right;
     margin-bottom: 0;
-
+    @include fade_in(2s);
     @include mq(440px) {
       font-size: 18px;
-    }
-  }
-
-  .magic-hat {
-    position: absolute;
-    bottom: -40px;
-    right: 18px;
-    opacity: 0.2;
-    transform: rotate(35deg);
-    & svg {
-      width: 30px;
-      height: auto;
-      fill: #666;
-    }
-
-    @include mq(266px) {
-      transform: rotate(0deg);
-      right: auto;
-      bottom: auto;
-      left: 14%;
-      top: 12px;
-    }
-
-    @include mq(300px) {
-      top: 24px;
-      & svg {
-        width: 40px;
-      }
-    }
-
-    @include mq(440px) {
-      opacity: 0.1;
-      & svg {
-        width: 60px;
-      }
     }
   }
 }
