--- a/source/css/_tools.scss
+++ b/source/css/_tools.scss
@@ -1,38 +1,27 @@
 //--------------------------------------------------------------------------
 
-$img_path : '../../img/icons/';
+$img_path: "../../img/icons/";
 
-@mixin bg_svg($name, $path : '0') {
+@mixin bg_svg($name, $path: "0") {
+  $svg_url: $img_path + $path + "/" + $name + ".svg";
+  $png_url: $img_path + $path + "/" + $name + ".png";
 
- $svg_url : $img_path + $path + '/' + $name + '.svg';
- $png_url : $img_path + $path + '/' + $name + '.png';
-
-  @if($path == '0')
-  {
-    $svg_url : $img_path + $name + '.svg';
-    $png_url : $img_path + $name + '.png';
+  @if ($path == "0") {
+    $svg_url: $img_path + $name + ".svg";
+    $png_url: $img_path + $name + ".png";
   }
-
-
-
 
   background-image: url($svg_url);
   background-repeat: no-repeat;
   .no-svg & {
     background-image: url($png_url);
-
   }
-
-
 }
 //--------------------------------------------------------------------------
 
-
 //--------------------------------------------------------------------------
 
 //--------------------------------------------------------------------------
-
-
 
 @mixin mq_small($breakpoint) {
   @media (max-width: $breakpoint) {
@@ -41,61 +30,79 @@ $img_path : '../../img/icons/';
 }
 //--------------------------------------------------------------------------
 @mixin mq($breakpoint) {
-    @media (min-width: $breakpoint) {
-      @content;
-    }
+  @media (min-width: $breakpoint) {
+    @content;
+  }
 }
 //--------------------------------------------------------------------------
 @mixin mq_between($min, $max) {
-@media (min-width: $min) and (max-width: $max) {
-  @content;
+  @media (min-width: $min) and (max-width: $max) {
+    @content;
+  }
 }
 
+@mixin placeholder() {
+  &::-webkit-input-placeholder {
+    /* WebKit browsers */
+    @content;
+  }
+  &:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    @content;
+    opacity: 1;
+  }
+  &::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    @content;
+    opacity: 1;
+  }
+  &:-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    @content;
+  }
 }
 
-
-
-@mixin placeholder(){
-    &::-webkit-input-placeholder { /* WebKit browsers */
-        @content;
-    }
-    &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-       @content;
-       opacity:  1;
-    }
-    &::-moz-placeholder { /* Mozilla Firefox 19+ */
-       @content;
-       opacity:  1;
-    }
-    &:-ms-input-placeholder { /* Internet Explorer 10+ */
-       @content;
-    }
-}
-
-
-%cf{
-
+%cf {
   clear: both;
   *zoom: 1;
 
-  &:before, &:after {
+  &:before,
+  &:after {
     content: "";
     display: table;
   }
 
-  &:after { clear:both; }
-
+  &:after {
+    clear: both;
+  }
 }
 
-.cf { @extend %cf; }
+.cf {
+  @extend %cf;
+}
 
 @mixin my_gradient($direction, $color1, $color2) {
-    background: -webkit-linear-gradient($direction, $color1, $color2 ); /* For Safari 5.1 to 6.0 */
-    background:      -o-linear-gradient($direction, $color1, $color2 ); /* For Opera 11.1 to 12.0 */
-    background:    -moz-linear-gradient($direction, $color1, $color2 ); /* For Firefox 3.6 to 15 */
-    background:      linear-gradient(to $direction, $color1, $color2 ); /* Standard syntax (must be last) */
+  background: -webkit-linear-gradient(
+    $direction,
+    $color1,
+    $color2
+  ); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(
+    $direction,
+    $color1,
+    $color2
+  ); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(
+    $direction,
+    $color1,
+    $color2
+  ); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(
+    to $direction,
+    $color1,
+    $color2
+  ); /* Standard syntax (must be last) */
 }
-
 
 //--------------------------------------------------------------------------
 .left {
@@ -106,50 +113,125 @@ $img_path : '../../img/icons/';
 .right {
   float: right;
   width: 50%;
- // text-align: right;
+  // text-align: right;
 }
 
-
-.center { text-align: center; }
+.center {
+  text-align: center;
+}
 
 @mixin fade_in($time) {
-    -webkit-animation: fadein $time; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein $time; /* Firefox < 16 */
-        -ms-animation: fadein $time; /* Internet Explorer */
-         -o-animation: fadein $time; /* Opera < 12.1 */
-            animation: fadein $time;
+  -webkit-animation: fadein $time; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein $time; /* Firefox < 16 */
+  -ms-animation: fadein $time; /* Internet Explorer */
+  -o-animation: fadein $time; /* Opera < 12.1 */
+  animation: fadein $time;
 }
 
-
-
-
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@mixin slade_in($time) {
+  -webkit-animation: sladeIn $time; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: sladeIn $time; /* Firefox < 16 */
+  -ms-animation: sladeIn $time; /* Internet Explorer */
+  -o-animation: sladeIn $time; /* Opera < 12.1 */
+  animation: sladeIn $time;
+}
+
+@keyframes sladeIn {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0;
+  }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes sladeIn {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0;
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes sladeIn {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0;
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes sladeIn {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0;
+  }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes sladeIn {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0;
+  }
 }
 
 // chevrons
@@ -158,34 +240,34 @@ $chevron-width: 2px;
 
 .chevron {
   height: 14px;
-  width:  14px;
+  width: 14px;
   overflow: visible;
 }
 .chevron::before {
-	border-style: solid;
-	border-width: $chevron-width $chevron-width 0 0;
-	content: '';
-	display: inline-block;
-	height: 0.45em;
-	left: 0.15em;
-	position: relative;
-	top: 40%;
-	transform: rotate(-45deg);
-	vertical-align: top;
-	width: 0.45em;
+  border-style: solid;
+  border-width: $chevron-width $chevron-width 0 0;
+  content: "";
+  display: inline-block;
+  height: 0.45em;
+  left: 0.15em;
+  position: relative;
+  top: 40%;
+  transform: rotate(-45deg);
+  vertical-align: top;
+  width: 0.45em;
 }
 
 .chevron.right:before {
-	left: 0;
-	transform: rotate(45deg);
+  left: 0;
+  transform: rotate(45deg);
 }
 
 .chevron.bottom:before {
-	top: 0;
-	transform: rotate(135deg);
+  top: 0;
+  transform: rotate(135deg);
 }
 
 .chevron.left:before {
-	left: 0.25em;
-	transform: rotate(-135deg);
+  left: 0.25em;
+  transform: rotate(-135deg);
 }
